--- a/index.html
+++ b/index.html
@@ -5,27 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Weave Lab</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <script src="../static/jquery-3.2.1.slim.min.js"></script>
-    <script src="../static/popper.min.js"></script>
-    <script src="../static/bootstrap.min.js"></script>
+    <script src="static/jquery-3.2.1.slim.min.js"></script>
+    <script src="static/popper.min.js"></script>
+    <script src="static/bootstrap.min.js"></script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
           integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" media="screen" href="../static/style.css"/>
-    <link rel="stylesheet" type="text/css" media="screen" href="../static/media_style.css"/>
+    <link rel="stylesheet" type="text/css" media="screen" href="static/style.css"/>
+    <link rel="stylesheet" type="text/css" media="screen" href="static/media_style.css"/>
     <link href="https://fonts.googleapis.com/css?family=Lato|Playfair+Display" rel="stylesheet">
     <!-- <script src="../static/jquery.scrollify.js" ></script> -->
     <!-- <script src="../static/jquery.scrollTo.min.js" ></script> -->
-    <script src="../static/js/main.js"></script>
+    <script src="static/js/main.js"></script>
     <!-- <script src="main.js"></script> -->
 </head>
 
 <body data-spy="scroll" data-offset="400" data-target="#menu">
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="menu">
-        <a class="navbar-brand" href="#home"><img src="../static/logo.png" class="logo"></a>
+        <a class="navbar-brand" href="#home"><img src="static/logo.png" class="logo"></a>
         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <!-- <span class="navbar-toggler-icon"></span> -->
@@ -47,10 +47,10 @@
                     <a class="nav-link" href="#contact">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../docs/team.html">Team</a>
+                    <a class="nav-link" href="docs/team.html">Team</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../docs/joinus.html">Join Us</a>
+                    <a class="nav-link" href="docs/joinus.html">Join Us</a>
                 </li>
             </ul>
         </div>
@@ -61,15 +61,15 @@
 <section class="home" data-section-name="home" id="home">
     <div class="jumbotron jumbotron-fluid bg_video">
         <video playsinline autoplay muted loop>
-            <source src="../static/final.webm" type="video/webm">
+            <source src="static/final.webm" type="video/webm">
         </video>
 
         <div class="container weave_logo justify-content-center align-items-center">
-            <img class="img-fluid" src="../static/WeaveLab.png" alt=""/>
+            <img class="img-fluid" src="static/WeaveLab.png" alt=""/>
         </div>
 
         <div class="container-fluid scrollDown justify-content-center">
-            <a href="#about"> <img class="img-fluid" src="../static/down_arrow.svg" alt=""/> </a>
+            <a href="#about"> <img class="img-fluid" src="static/down_arrow.svg" alt=""/> </a>
         </div>
 
         <ul class="container social_media">
@@ -78,7 +78,7 @@
         </ul>
 
         <div class="container iiitd_logo">
-            <a href="https://www.iiitd.ac.in/"><img class="img-fluid" src="../static/iiitd.png" alt=""/> </a>
+            <a href="https://www.iiitd.ac.in/"><img class="img-fluid" src="static/iiitd.png" alt=""/> </a>
         </div>
 
 
@@ -100,10 +100,10 @@
                 <div id="carouselAbout" class=" carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="d-block w-100" src="../static/carousel1.png" alt="First slide"/>
+                            <img class="d-block w-100" src="static/carousel1.png" alt="First slide"/>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="../static/carousel1.png" alt="Second slide"/>
+                            <img class="d-block w-100" src="static/carousel1.png" alt="Second slide"/>
                         </div>
                     </div>
                 </div>
@@ -120,23 +120,23 @@
                 <h1>Research</h1>
             </div>
             <div class="col-4" style="position: relative;">
-                <a href="../docs/research.html" class="see_more"><h5>See More<img src="../static/down_arrow.svg"
-                                                                                  style="transform: rotate(-90deg);padding-top: 50px;width:0.7em;"/>
+                <a href="docs/research.html" class="see_more"><h5>See More<img src="static/down_arrow.svg"
+                                                                               style="transform: rotate(-90deg);padding-top: 50px;width:0.7em;"/>
                 </h5></a>
             </div>
         </div>
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-sm-6 col-lg-6 col-md-6 re_img">
-                    <a href="./projects/gehna.html">
-                        <img src="../static/gehna.jpg" alt="lego"/>
+                    <a href="docs/projects/gehna.html">
+                        <img src="static/gehna.jpg" alt="lego"/>
                     </a>
                     <!--<h4><em>Research Topic</em></h4>-->
                     <h3 style="color: white; position: absolute;z-index:1;">Gehna</h3>
                 </div>
                 <div class="col-sm-6 col-lg-6 col-md-6 re_img">
-                    <a href="./projects/lpvr.html">
-                        <img src="../static/lpvr.jpg" alt="lego"/>
+                    <a href="docs/projects/lpvr.html">
+                        <img src="static/lpvr.jpg" alt="lego"/>
                     </a>
                     <!--<h4><em>Research Topic</em></h4>-->
                     <h3 style="color: white; position: absolute;z-index:1;">LPVR</h3>
@@ -146,9 +146,9 @@
         <div class="row justify-content-center">
             <div class="col-12 justify-content-center mob_seeMore">
                 <div>
-                    <a href="../docs/research.html">
+                    <a href="docs/research.html">
                         <h5 style="font-size: 1rem;">See More
-                            <img src="../static/down_arrow.svg"
+                            <img src="static/down_arrow.svg"
                                  style="transform: rotate(-90deg);padding-top: 50px;width:0.8rem;"/>
                         </h5>
                     </a>
@@ -209,8 +209,8 @@
             <!-- Grid column -->
             <div class="col-md-3 col-lg-3 col-xl-3 mx-auto">
                 <!--<h6 class="text-uppercase mb-4 font-weight-bold">Weave Lab</h6>-->
-                <img src="../static/logo.png" style="width: 5.5rem;">
-                <img src="../static/iiitd-greyscale.png" style="width: 10rem;">
+                <img src="static/logo.png" style="width: 5.5rem;">
+                <img src="static/iiitd-greyscale.png" style="width: 10rem;">
                 <p style="text-align: center; font-size: 0.7rem;" >&copy; 2019 Weave Lab</p>
             </div>
             <!-- Grid column -->
@@ -239,10 +239,10 @@
                 <!--<h6 class="text-uppercase mb-4 font-weight-bold">Useful links</h6>-->
                 <p class="footer-link">
 
-                    <a href="./team.html">Team</a>
+                    <a href="docs/team.html">Team</a>
                 </p>
                 <p class="footer-link">
-                    <a href="./joinus.html">Join Us</a>
+                    <a href="docs/joinus.html">Join Us</a>
                 </p>
 
             </div>
