Updated video error on mobile devices

--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@
 <!-- landing page -->
 <section class="home" data-section-name="home" id="home">
     <div class="jumbotron jumbotron-fluid bg_video">
-        <video playsinline autoplay muted loop>
+        <video playsinline autoplay muted loop poster="/static/final-poster.png">
             <source src="static/final.webm" type="video/webm">
+
         </video>
 
         <div class="container weave_logo justify-content-center align-items-center">
