--- a/index.html
+++ b/index.html
@@ -5,27 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Weave Lab</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <script src="static/jquery-3.2.1.slim.min.js"></script>
-    <script src="static/popper.min.js"></script>
-    <script src="static/bootstrap.min.js"></script>
+    <script src="./static/jquery-3.2.1.slim.min.js"></script>
+    <script src="./static/popper.min.js"></script>
+    <script src="./static/bootstrap.min.js"></script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
           integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" media="screen" href="static/style.css"/>
-    <link rel="stylesheet" type="text/css" media="screen" href="static/media_style.css"/>
+    <link rel="stylesheet" type="text/css" media="screen" href="./static/style.css"/>
+    <link rel="stylesheet" type="text/css" media="screen" href="./static/media_style.css"/>
     <link href="https://fonts.googleapis.com/css?family=Lato|Playfair+Display" rel="stylesheet">
     <!-- <script src="../static/jquery.scrollify.js" ></script> -->
     <!-- <script src="../static/jquery.scrollTo.min.js" ></script> -->
-    <script src="static/js/main.js"></script>
+    <script src="./static/js/main.js"></script>
     <!-- <script src="main.js"></script> -->
 </head>
 
 <body data-spy="scroll" data-offset="400" data-target="#menu">
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="menu">
-        <a class="navbar-brand" href="#home"><img src="static/logo.png" class="logo"></a>
+        <a class="navbar-brand" href="#home"><img src="./static/logo.png" class="logo"></a>
         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <!-- <span class="navbar-toggler-icon"></span> -->
@@ -60,17 +60,19 @@
 <!-- landing page -->
 <section class="home" data-section-name="home" id="home">
     <div class="jumbotron jumbotron-fluid bg_video">
-        <video playsinline autoplay muted loop poster="/static/final-poster.png">
-            <source src="static/final.webm" type="video/webm">
+        <video playsinline autoplay muted loop poster="./static/final-poster.png">
+            <source src="./static/final.webm" type="video/webm">
+            <source src="./static/final.m4v" type="video/mp4">
+
 
         </video>
 
         <div class="container weave_logo justify-content-center align-items-center">
-            <img class="img-fluid" src="static/WeaveLab.png" alt=""/>
+            <img class="img-fluid" src="./static/WeaveLab.png" alt=""/>
         </div>
 
         <div class="container-fluid scrollDown justify-content-center">
-            <a href="#about"> <img class="img-fluid" src="static/down_arrow.svg" alt=""/> </a>
+            <a href="#about"> <img class="img-fluid" src="./static/down_arrow.svg" alt=""/> </a>
         </div>
 
         <ul class="container social_media">
@@ -79,7 +81,7 @@
         </ul>
 
         <div class="container iiitd_logo">
-            <a href="https://www.iiitd.ac.in/"><img class="img-fluid" src="static/iiitd.png" alt=""/> </a>
+            <a href="https://www.iiitd.ac.in/"><img class="img-fluid" src="./static/iiitd.png" alt=""/> </a>
         </div>
 
 
@@ -101,10 +103,10 @@
                 <div id="carouselAbout" class=" carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="d-block w-100" src="static/carousel1.png" alt="First slide"/>
+                            <img class="d-block w-100" src="./static/carousel1.png" alt="First slide"/>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="static/carousel1.png" alt="Second slide"/>
+                            <img class="d-block w-100" src="./static/carousel1.png" alt="Second slide"/>
                         </div>
                     </div>
                 </div>
@@ -121,8 +123,8 @@
                 <h1>Research</h1>
             </div>
             <div class="col-4" style="position: relative;">
-                <a href="docs/research.html" class="see_more"><h5>See More<img src="static/down_arrow.svg"
-                                                                               style="transform: rotate(-90deg);padding-top: 50px;width:0.7em;"/>
+                <!--<a href="docs/research.html" class="see_more"><h5>See More<img src="static/down_arrow.svg"
+                                                                               style="transform: rotate(-90deg);padding-top: 50px;width:0.7em;"/> -->
                 </h5></a>
             </div>
         </div>
@@ -130,14 +132,14 @@
             <div class="row justify-content-center">
                 <div class="col-sm-6 col-lg-6 col-md-6 re_img">
                     <a href="docs/projects/gehna.html">
-                        <img src="static/gehna.jpg" alt="lego"/>
+                        <img src="./static/gehna.jpg" alt="lego"/>
                     </a>
                     <!--<h4><em>Research Topic</em></h4>-->
                     <h3 style="color: white; position: absolute;z-index:1;">Gehna</h3>
                 </div>
                 <div class="col-sm-6 col-lg-6 col-md-6 re_img">
                     <a href="docs/projects/lpvr.html">
-                        <img src="static/lpvr.jpg" alt="lego"/>
+                        <img src="./static/lpvr.jpg" alt="lego"/>
                     </a>
                     <!--<h4><em>Research Topic</em></h4>-->
                     <h3 style="color: white; position: absolute;z-index:1;">LPVR</h3>
@@ -147,12 +149,12 @@
         <div class="row justify-content-center">
             <div class="col-12 justify-content-center mob_seeMore">
                 <div>
-                    <a href="docs/research.html">
-                        <h5 style="font-size: 1rem;">See More
-                            <img src="static/down_arrow.svg"
-                                 style="transform: rotate(-90deg);padding-top: 50px;width:0.8rem;"/>
-                        </h5>
-                    </a>
+                    <!--<a href="docs/research.html">-->
+                        <!--<h5 style="font-size: 1rem;">See More-->
+                            <!--<img src="static/down_arrow.svg"-->
+                                 <!--style="transform: rotate(-90deg);padding-top: 50px;width:0.8rem;"/>-->
+                        <!--</h5>-->
+                    <!--</a>-->
                 </div>
             </div>
         </div>
@@ -210,8 +212,8 @@
             <!-- Grid column -->
             <div class="col-md-3 col-lg-3 col-xl-3 mx-auto">
                 <!--<h6 class="text-uppercase mb-4 font-weight-bold">Weave Lab</h6>-->
-                <img src="static/logo.png" style="width: 5.5rem;">
-                <img src="static/iiitd-greyscale.png" style="width: 10rem;">
+                <img src="./static/logo.png" style="width: 5.5rem;">
+                <img src="./static/iiitd-greyscale.png" style="width: 10rem;">
                 <p style="text-align: center; font-size: 0.7rem;" >&copy; 2019 Weave Lab</p>
             </div>
             <!-- Grid column -->
