--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         <img src="./static/lpvr.jpg" alt="lego"/>
                     </a>
                     <!--<h4><em>Research Topic</em></h4>-->
-                    <h3 style="color: white; position: absolute;z-index:1;">LPVR</h3>
+                    <h3 style="color: white; position: absolute;z-index:1;">VirtualBricks</h3>
                 </div>
             </div>
         </div>
