--- a/index.html
+++ b/index.html
@@ -132,17 +132,17 @@
             <div class="row justify-content-center">
                 <div class="col-sm-6 col-lg-6 col-md-6 re_img">
                     <a href="docs/projects/gehna.html">
-                        <img src="./static/gehna.jpg" alt="lego"/>
+                        <img src="./static/gehna.jpg" alt="Gehna"/>
                     </a>
                     <!--<h4><em>Research Topic</em></h4>-->
-                    <h3 style="color: white; position: absolute;z-index:1;">Gehna</h3>
+                    <h3 style="color: white; position: absolute;z-index:1;">Gehna <br><span style="color: rgb(236, 236, 236); font-size: 1.25rem;">Accepted at CHI’19</span></h3>
                 </div>
                 <div class="col-sm-6 col-lg-6 col-md-6 re_img">
                     <a href="docs/projects/lpvr.html">
-                        <img src="./static/lpvr.jpg" alt="lego"/>
+                        <img src="./static/lpvr.jpg" alt="VirtualBricks"/>
                     </a>
                     <!--<h4><em>Research Topic</em></h4>-->
-                    <h3 style="color: white; position: absolute;z-index:1;">VirtualBricks</h3>
+                    <h3 style="color: white; position: absolute;z-index:1;">VirtualBricks<br><span style="color: rgb(236, 236, 236); font-size: 1.25rem;">Accepted at CHI’19</span></h3>
                 </div>
             </div>
         </div>
