--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
         </div>
 
         <ul class="container social_media">
+            <li><a href="https://medium.com/iiitd-weave-lab"><i class="fab fa-medium fa-3x"></i></a></li>
+            <li><a href="https://www.linkedin.com/company/weavelabiiitd/"><i class="fab fa-linkedin-in fa-3x"></i></a></li>
             <li><a href="https://github.com/weave-lab-iiitd"><i class="fab fa-github fa-3x"></i></a></li>
             <li><a href="https://twitter.com/WeaveIIITD"><i class="fab fa-twitter fa-3x"></i></a></li>
         </ul>
@@ -103,10 +105,7 @@
                 <div id="carouselAbout" class=" carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="d-block w-100" src="./static/carousel1.png" alt="First slide"/>
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="./static/carousel1.png" alt="Second slide"/>
+                            <img class="d-block w-100" src="./static/Weave_grp.jpg" alt="First slide"/>
                         </div>
                     </div>
                 </div>
