Added updated files

--- a/index.html
+++ b/index.html
@@ -61,10 +61,7 @@
 <section class="home" data-section-name="home" id="home">
     <div class="jumbotron jumbotron-fluid bg_video">
         <video playsinline autoplay muted loop poster="./static/final-poster.png">
-            <source src="./static/final.webm" type="video/webm">
-            <source src="./static/final.m4v" type="video/mp4">
-
-
+            <source src="./static/BGvideo.mp4" type="video/mp4">
         </video>
 
         <div class="container weave_logo justify-content-center align-items-center">
@@ -76,10 +73,10 @@
         </div>
 
         <ul class="container social_media">
-            <li><a href="https://medium.com/iiitd-weave-lab"><i class="fab fa-medium fa-3x"></i></a></li>
-            <li><a href="https://www.linkedin.com/company/weavelabiiitd/"><i class="fab fa-linkedin-in fa-3x"></i></a></li>
-            <li><a href="https://github.com/weave-lab-iiitd"><i class="fab fa-github fa-3x"></i></a></li>
-            <li><a href="https://twitter.com/WeaveIIITD"><i class="fab fa-twitter fa-3x"></i></a></li>
+            <li><a href="https://medium.com/iiitd-weave-lab"><img src="./static/medium.png"></a></li>
+            <li><a href="https://www.linkedin.com/company/weavelabiiitd/"><img src="./static/linkedin.png"></a></li>
+            <li><a href="https://github.com/weave-lab-iiitd"><img src="./static/github.svg"></a></li>
+            <li><a href="https://twitter.com/WeaveIIITD"><img src="./static/twitter.svg"></a></li>
         </ul>
 
         <div class="container iiitd_logo">
@@ -115,10 +112,10 @@
 </section>
 
 <!-- researches page -->
-<section id="research" style="margin-left:20px; margin-right:20px;">
+<section id="research" >
     <div class="container-fluid research ">
         <div class="row">
-            <div class="col-8">
+            <div class="col-12">
                 <h1>Research</h1>
             </div>
             <div class="col-4" style="position: relative;">
@@ -134,14 +131,14 @@
                         <img src="./static/gehna.jpg" alt="Gehna"/>
                     </a>
                     <!--<h4><em>Research Topic</em></h4>-->
-                    <h3 style="color: white; position: absolute;z-index:1;">Gehna <br><span style="color: rgb(236, 236, 236); font-size: 1.25rem;">Accepted at CHI’19</span></h3>
+                    <h3 style="color: white; position: absolute;z-index:1;">Gehna <br><span style="color: rgb(236, 236, 236);">Accepted at CHI’19</span></h3>
                 </div>
                 <div class="col-sm-6 col-lg-6 col-md-6 re_img">
                     <a href="docs/projects/lpvr.html">
                         <img src="./static/lpvr.jpg" alt="VirtualBricks"/>
                     </a>
                     <!--<h4><em>Research Topic</em></h4>-->
-                    <h3 style="color: white; position: absolute;z-index:1;">VirtualBricks<br><span style="color: rgb(236, 236, 236); font-size: 1.25rem;">Accepted at CHI’19</span></h3>
+                    <h3 style="color: white; position: absolute;z-index:1;">VirtualBricks<br><span style="color: rgb(236, 236, 236);">Accepted at CHI’19</span></h3>
                 </div>
             </div>
         </div>
@@ -220,7 +217,7 @@
             <hr class="w-100 clearfix d-md-none">
 
             <!-- Grid column -->
-            <div class="offset-col-md-2 col-lg-2 col-xl-2 mx-auto">
+            <div class="col-md-3 col-lg-2 col-xl-2 mx-auto">
                 <!--<h6 class="text-uppercase mb-4 font-weight-bold">Products</h6>-->
                 <p class="footer-link">
                     <a href="#about">About</a>
