--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav  ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#about">About</a>
+                    <a class="nav-link exp" href="#about"><span >About</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="researchDiv" href="#research">Research</a>
+                    <a class="nav-link exp" id="researchDiv" href="#research"><span>Research</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#contact">Contact</a>
+                    <a class="nav-link exp" href="#contact"><span>Contact</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="docs/team.html">Team</a>
+                    <a class="nav-link exp" href="docs/team.html"><span >Team</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="docs/joinus.html">Join Us</a>
+                    <a class="nav-link exp" href="docs/joinus.html"><span>Join Us</span></a>
                 </li>
             </ul>
         </div>
